--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server",
     "listen": "nodemon server",
-    "test": "mocha"
+    "test": "mocha",
+    "build-css": "tailwindcss -i public/stylesheets/src/input.css -o public/stylesheets/dist/output.css"
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,9 @@
     "mocha": "^9.2.2",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
-    "sequelize": "^6.17.0",
+    "sequelize": "^6.17.0"
+  },
+  "devDependencies": {
     "tailwindcss": "^3.0.23"
   }
 }
