--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server",
     "listen": "nodemon server",
     "test": "mocha",
-    "build-css": "tailwindcss -i public/stylesheets/src/input.css -o public/stylesheets/dist/output.css"
+    "build-css": "tailwindcss -i public/stylesheets/src/input.css -o public/stylesheets/dist/output.css --watch"
   },
   "repository": {
     "type": "git",
