styled homepage. All functionality for MVP is done besides favoriting.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server",
     "listen": "nodemon server",
     "test": "mocha",
-    "build-css": "tailwindcss -i public/stylesheets/src/input.css -o public/stylesheets/dist/output.css --watch",
+    "build-css": "npx tailwindcss -i public/stylesheets/src/input.css -o public/stylesheets/dist/output.css --watch",
     "seed": "node seeds"
   },
   "repository": {
