--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/garretthilberling/project-2#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "connect-session-sequelize": "^7.1.2",
     "convertapi": "^1.11.1",
     "dotenv": "^16.0.0",
